# variant-annotation

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  docker-compose-dev.yml  pyproject.toml
settings/: .env.template
src/: add_dna_clingen_allele_ids.py  add_variant_position_alleles.py  add_vcf_identifiers.py  annotate_clinvar.py  annotate_erepo.py  annotate_gnomad.py  annotate_mavedb.py  annotate_missense_scores.py  annotate_spliceai.py  annotate_vep.py  clear_clingen_cache.py  compare_columns.py  filter_columns.py  filter_rows.py  flatten_dna_variants.py  map_variants.py  merge_columns.py  merge_rows.py  normalize_intra_codon_haplotypes.py  reorder_columns.py  replace_rows.py  reverse_translate_protein_variants.py  utilities.py
src/lib/: __init__.py  clingen.py
src/scripts/: fetch_uta_dump.sh  run_add_dna_clingen_allele_ids.sh  run_add_variant_position_alleles.sh  run_add_vcf_identifiers.sh  run_annotate_clinvar.sh  run_annotate_erepo.sh  run_annotate_gnomad.sh  run_annotate_mavedb.sh  run_annotate_missense_scores.sh  run_annotate_spliceai.sh  run_annotate_vep.sh  run_clear_clingen_cache.sh  run_flatten_dna_variants.sh  run_haplotypes_to_delins.sh  run_map_variants.sh  run_reverse_translate_protein_variants.sh  run_utilities.sh
tests/: test_add_dna_clingen_allele_ids.py  test_add_variant_position_alleles.py  test_add_vcf_identifiers.py  test_annotate_clinvar.py  test_annotate_gnomad.py  test_annotate_mavedb.py  test_annotate_missense_scores.py  test_annotate_spliceai.py  test_annotate_vep.py  test_filter_columns.py  test_filter_rows.py  test_flatten_dna_variants.py  test_lib_clingen.py  test_map_variants.py  test_merge_columns.py  test_merge_rows.py  test_normalize_intra_codon_haplotypes.py  test_reorder_columns.py  test_reverse_translate_protein_variants.py  test_utilities.py
