[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "variant-annotation"
version = "0.1.0"
authors = [
    { name="Jeremy Stone", email="74574922+jstone-dev@users.noreply.github.com" },
]
description = "Genetic variant mapping and annotation pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GNU Affero General Public License v3 or later (AGPL-3.0-or-later)" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "click",
    "python-dotenv",
    "requests",
    "redis",
    "biopython",
    "variant-translation==1.1.0b1",
]

[project.optional-dependencies]
dev = [
    "ruff",
]
gnomad = [
    "hail",
]
mapping = [
    "dcd-mapping @ git+https://github.com/VariantEffect/dcd_mapping2.git@mavedb-main",
]
publish = [
    "build",
    "twine",
]
tests = [
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/bbi-lab/variant-annotation"
"Bug Tracker" = "https://github.com/bbi-lab/variant-annotation/issues"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
line-ending = "lf"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true

[tool.variant-translation.build-instructions]
build_command = "python -m build"
check_command = "python -m twine check dist/*"
upload_command = "python -m twine upload dist/*"
